
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_9__ TYPE_3__ ;
typedef struct TYPE_8__ TYPE_2__ ;
typedef struct TYPE_7__ TYPE_1__ ;


struct TYPE_8__ {TYPE_1__* Material; } ;
struct TYPE_9__ {TYPE_2__ Light; } ;
struct TYPE_7__ {int SpecularIndex; int DiffuseIndex; int AmbientIndex; int Shininess; int Emission; int Specular; int Diffuse; int Ambient; } ;
typedef size_t GLuint ;
typedef int GLfloat ;
typedef scalar_t__ GLenum ;
typedef TYPE_3__ GLcontext ;


 int COPY_4V (int *,int ) ;

 scalar_t__ GL_BACK ;



 scalar_t__ GL_FRONT ;
 int GL_INVALID_ENUM ;
 int GL_INVALID_OPERATION ;


 scalar_t__ INSIDE_BEGIN_END (TYPE_3__*) ;
 int gl_error (TYPE_3__*,int ,char*) ;

void gl_GetMaterialfv( GLcontext *ctx,
                       GLenum face, GLenum pname, GLfloat *params )
{
   GLuint f;

   if (INSIDE_BEGIN_END(ctx)) {
      gl_error( ctx, GL_INVALID_OPERATION, "glGetMaterialfv" );
      return;
   }
   if (face==GL_FRONT) {
      f = 0;
   }
   else if (face==GL_BACK) {
      f = 1;
   }
   else {
      gl_error( ctx, GL_INVALID_ENUM, "glGetMaterialfv(face)" );
      return;
   }
   switch (pname) {
      case 133:
         COPY_4V( params, ctx->Light.Material[f].Ambient );
         break;
      case 131:
         COPY_4V( params, ctx->Light.Material[f].Diffuse );
  break;
      case 128:
         COPY_4V( params, ctx->Light.Material[f].Specular );
  break;
      case 130:
  COPY_4V( params, ctx->Light.Material[f].Emission );
  break;
      case 129:
  *params = ctx->Light.Material[f].Shininess;
  break;
      case 132:
  params[0] = ctx->Light.Material[f].AmbientIndex;
  params[1] = ctx->Light.Material[f].DiffuseIndex;
  params[2] = ctx->Light.Material[f].SpecularIndex;
  break;
      default:
         gl_error( ctx, GL_INVALID_ENUM, "glGetMaterialfv(pname)" );
   }
}
